--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             <img src="macaron4.jpg" alt="Макарун з фісташками">
             <h2>Макарун з фісташками</h2>
             <p>Ароматний макарун з кремовою начинкою з фісташок.</p>
-            <div class="pric
-e">170 грн</div>
+            <div class="price">170 грн</div>
         </div>
         <div class="product">
             <img src="macaron5.jpg" alt="Макарун з лимоном">
