--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
         <li>Доставка по всій Україні</li>
     </ul>
     <p>Спробуйте наші фірмові смаки, такі як ваніль, фісташка, полуниця та багато інших. Ми гарантуємо, що кожен макарун подарує вам незабутні емоції.</p>
+    <p>Як замовити:</p>
+    <l>Виберіть потрібний набір макарунів або індивідуальні смаки.</l>
+    <l>Додайте товар до кошика.</l>
+    <l>Виберіть спосіб оплати та доставки.</l>
+    <l>Очікуйте на ваше замовлення та насолоджуйтесь смаком вишуканих десертів!</l>
 </section>
 
 <!-- Каталог -->
@@ -159,7 +164,13 @@
         <li>Понеділок - П'ятниця: 9:00 - 20:00</li>
         <li>Субота - Неділя: 10:00 - 18:00</li>
     </ul>
+    <p>Про нас</p>
+    <l>Ми — команда професіоналів, закоханих у кондитерське мистецтво, і прагнемо дарувати вам вишукані смакові враження. Кожен макарун виготовляється вручну, з використанням тільки найкращих інгредієнтів, без штучних добавок та консервантів. Ми створюємо макарунси для справжніх гурманів, які цінують не тільки смак, але й естетику.</l>
+    <p>Подарункові набори</p>
+    <l>Ми пропонуємо також подарункові набори макарунів, які стануть чудовим презентом для будь-якої події. У наборах ви можете обрати різноманітні смаки та колірну гамму макарунів, що зробить ваш подарунок не тільки смачним, але й естетично привабливим.</l>
+
 </section>
+
 
 <footer>
     &copy; 2024 Магазин Макарунів. Усі права захищено.
